@@ -36,3 +36,4 @@ Version: V0.3B3 Date: Tue Oct  4 10:04:27 2005 +++++++++++++++++++++++++++++++
 + reimplement hide show
 + solved the performance problems to display objects in fullscreen mode (by disabling the background image)
 + freeing the resourcec on document close
++ performance critical bug fixed rendering points in Iv scenegraph (due to uninitialised transparency in Feature constructor)
